# mundialo

./: .gitignore  CASE_STUDY.md  LICENSE  README.md  README.pl.md  architektura-redakcji-ai-mundial-instagram.md  architektura-relacje-medialne.md  err.txt  glos-redakcji.md  pomysly.md  pyproject.toml  runbook-mecz.md
app/: __init__.py  cli.py  health.py
app/agents/: __init__.py  editorial.py  facts_scout.py  llm_copywriter.py  media_curator.py  media_reaction.py  media_scout.py  post_match_gate.py
app/evaluation/: __init__.py  judges.py  leaderboard.py  reports.py
app/memory/: __init__.py  episodes.py  store.py  voice.py
app/models/: __init__.py  gateway.py  structured.py
app/observability/: __init__.py  logging.py  telemetry.py
app/orchestration/: __init__.py  coordinator.py
app/render/: __init__.py  __main__.py  renderer.py  specs.py
app/schemas/: __init__.py  domain.py
app/tools/: __init__.py  contracts.py  control.py  fetch.py  gateway.py  registry.py  research.py  schedule.py  search.py
brand/: bio.txt  intro_caption.txt  x_intro_post.txt
data/render/: city_palettes.json
docs/demo/: caption.txt
scripts/: brand_assets.py  build_country_media.py  fetch_render_assets.py  roadmap.py  validate_fixture.py
tests/: test_contracts.py  test_control.py  test_country_media.py  test_episodes.py  test_fact_check.py  test_hardening.py  test_llm_copywriter.py  test_match_resolver.py  test_media_curator.py  test_media_reaction.py  test_render_specs.py  test_research.py  test_schedule.py  test_search.py  test_tool_gateway.py  test_voice.py  test_workflow.py
(+30 files in other folders)
